--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "version": "0.0.0",
   "repository": {
     "type": "git",
-    "url": "git://github.com/ben-ng/kitten.git"
+    "url": "git://github.com/ben-ng/kitten-js.git"
   },
   "main": "./lib/index.js",
   "dependencies": {
